# cmake-git-version-tracking

./: .gitignore  git_watcher.cmake
demo/: CMakeLists.txt  git.h.in  main.cc
